	  of usage() output. (src/client.c)
	* Config->com is now an enum and command format strings are 
	  individually #defined and end in _FMT (src/client.c)
	* Made all functions in client static and discovered duplicate 
	  functions defined in config.[ch].  Prepended 'x' to client versions
	  for now (factor later) (src/client.h)
	* Added accessor functions and made 'log' private to log module 
	  (src/log.[ch])
	* Made clean target clean up after default target, remove no-op cd
   	  commands, employ make -C where appropriate, do not build vicebox 
	  by default (Makefile)
	* Fixed compilation errors if NDUMP is not defined; added exit callback
	  to init_error() (null in client, set in server if NDUMP defined).
	* Updated powerman.1 to match option changes.
	* bzero->memset
	* Took local includes out of powerman.h (still need to do sys includes)

2002-07-27 garlick
	* Renamed main.[ch] to powermand.[ch]; renamed client.c to powerman.c.
	* Moved set_tv() from powermand.c to config.c.
	* Moved overdue() from powermand.c to device.c.
	* Moved read_Config_file() from config.c to powermand.c and exported
	  init_Client_protocol() from config.c.
	* Created get_String_from_Buffer() buffer in util.[ch] to eliminate
	  dependence of buffer.h pm_string.h.
	* Fixed Delay to account for select EINTR.
	* Created gettimeofday wrapper.
	* Fixed Read/Write to retry on EINTR and handle other errors gracefully
	* Have Free() wrapper clear memory to zero magic cookies, etc..
	* Made Buffer an opaque type with magic cookie.
	* Made String an opaque type with magic cookie.
	* Give appropriate errors when powermand config file is not set or 
	  set improperly, and start with a default config file.
	* Powermand options changed per code review.
	* Moved system includes out of powerman.h.
	* Merged general code review suggestions in to TODO file
	  (but not the specific yet)
	* Added support for quadrics style host ranges in powerman client.
	* Move powermand from bin to sbin.