@@ -58,3 +58,7 @@
 	  (but not the specific yet)
 	* Added support for quadrics style host ranges in powerman client.
 	* Move powermand from bin to sbin.
+	* Use standard assert instead of powerman.h one so we get killed
+	  with a SIGABORT and get debugger stack traces.
+	* Added some list_iterator_destroy's to match list_iterator_create's
+	  in powerman.c
